# ysda-search-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh
scripts/install_deps/: linux.sh  osx.sh
src/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  main.cpp
src/scripts/: common.py  get_file_to_size.py  wiki_dir_text_extractor.py  wiki_text_extractor.py  words_counter.py
src/tools/: CMakeLists.txt
src/tools/crawler/: .gitignore  CMakeLists.txt  crawler  main.cpp
src/tools/dictionary_parser/: .gitignore  CMakeLists.txt  build.sh  main.cpp
src/tools/graph_statistics/: .gitignore  CMakeLists.txt  graph.txt  main.cpp
src/tools/index_parser/: .gitignore  CMakeLists.txt  build.sh  main.cpp
src/tools/links_parser/: .gitignore  CMakeLists.txt  main.cpp
src/tools/pagerank_calculator/: .gitignore  CMakeLists.txt  main.cpp
src/tools/ranker/: .gitignore  CMakeLists.txt  build.sh  main.cpp
src/tools/simple_crawler/: .gitignore  CMakeLists.txt  clear_crawled.sh  default_config.json  main.cpp  prepare_for_crawling.sh
src/tools/simple_wikipedia_crawler/: .gitignore  CMakeLists.txt  default_config.json  default_config.txt  main.cpp
src/tools/words_counter/: .gitignore  CMakeLists.txt  main.cpp
